Alterando imagens e NavBar

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,9 @@
     <br>
     <section id="section">
         <div>
-            <h2 id="Texto1">Aqui temos o que você quiser para sua casa e tambem para suas receitas!</h2>
+            <p id="Texto1">Aqui temos o que você quiser para sua casa<br>
+                e tambem para as suas receitas!<br>
+                Com as melhores ofertas e custo beneficio para você</p>
         </div>
         <img id="Img1" src="~/imagem/img1.jpeg" />    
     </section> 
@@ -31,17 +33,16 @@
     <br>
 
     <section class="imgpromo">
-        <div class ="imgpromo">
-			<img src="~/imagem/detergente.jpg" />
+        <div>
+            <img src="~/imagem/detergente.jpg" alt="Detergente">
         </div>
-
-        <div class="imgpromo">
-			<img src="~/imagem/banana.jpg" />
+        <div>
+            <img src="~/imagem/banana.jpg" alt="Banana">
         </div>
-
-        <div class="imgpromo">
-			<img src="~/imagem/coca.jpg" />
+        <div>
+            <img src="~/imagem/coca.jpg" alt="Coca">
         </div>
     </section>
+
 
 </div>
