Atualizando a tela Login

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,45 +4,23 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem - Vindo ao nosso supermercado </h1>
+    <h1 class="display-4"> Login </h1>
     <br>
-    <br>
-    <br>
-    <section id="section">
-        <div>
-            <p id="Texto1">Aqui temos o que você quiser para sua casa<br>
-                e tambem para as suas receitas!<br>
-                Com as melhores ofertas e custo beneficio para você</p>
-        </div>
-        <img id="Img1" src="~/imagem/img1.jpeg" />    
-    </section> 
     
     <br>
-    <br>
-    <br>
-
-    <h1>Produtos</h1>
-
-    <!--Criando uma barra de pesquisa não funcional -->
-    <form>
-    <input type="text" placeholder="Buscar.." style="padding: 8px; width: 200px;" />
-    <button type="submit" style="padding: 8px;">Pesquisar</button>
-    </form>
-
-    <br>
-    <br>
-
-    <section class="imgpromo">
-        <div>
-            <img src="~/imagem/detergente.jpg" alt="Detergente">
+    <section class="Login">
+        <h2 >Digite seus dados</h2>
+        <div id=digito>
+           <input type="text" placeholder="Usuario">
+           <br>
+           <input type="text" placeholder="Digite sua Senha">
         </div>
         <div>
-            <img src="~/imagem/banana.jpg" alt="Banana">
+            <input type="button" value="Entrar">
+            <br>
+            <input type="button" value="Cadastrar">
         </div>
-        <div>
-            <img src="~/imagem/coca.jpg" alt="Coca">
-        </div>
-    </section>
-
-
+        
+    </section> 
+  
 </div>
